--- a/templates/main/affichesortie.html.twig
+++ b/templates/main/affichesortie.html.twig
@@ -76,6 +76,10 @@
     </div>
     </div>
     {% endif %}
+                <div class="button-container">
+                    <a href="{{ path('main') }}" class="btn btn-action"> Annuler</a>
+
+                </div>
         </div>
 
 
