--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,7 +61,7 @@
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-bars"></i>
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <div class="dropdown-menu {% if app.user != null %}{% if user.roles[0]  == "ROLE_ADMIN" %}admin{% endif %}{% endif %} " aria-labelledby="dropdownMenuButton">
                         <div class="utilisateur">
                             {% if app.user == null %}
                                 <a class="dropdown-item" href="{{ path('app_login') }}">Se connecter</a>
@@ -81,8 +81,8 @@
                             <a class="dropdown-item" href="{{ path('app_sortie') }}">Créer une sortie</a>
                             {% if app.user != null %}
                                 {% if user.roles[0]  == "ROLE_ADMIN" %}
-                            <a class="dropdown-item" href="">Créer une ville</a>
-                            <a class="dropdown-item" href="">Créer une lieu</a>
+                            <a class="dropdown-item" href="{{ path('app_ville') }}">Créer une ville</a>
+                            <a class="dropdown-item" href="{{ path('app_lieu') }}">Créer une lieu</a>
                             {% endif %}
                             {% endif %}
                         </div>
