--- a/templates/main/modificationprofil.html.twig
+++ b/templates/main/modificationprofil.html.twig
@@ -54,12 +54,12 @@
     </div>
     <div class="password">
         <label for="mdp">Mot de passe :</label>
-        <input type="password" id="motdepasse" name="mdp" value="">
-        <button class="btn-action" id="buttonMDP" type="button" onclick="Afficher('motdepasse',this.id)"><i class="fas fa-eye"></i></button>
+        <input type="password" id="motdepasse" name="mdp" required value="">
+        <button class="btn-action" id="buttonMDP" type="button"  onclick="Afficher('motdepasse',this.id)"><i class="fas fa-eye"></i></button>
     </div>
     <div class="password">
         <label for="mdp_c">Confirmation du mot de passe :</label>
-        <input type="password" id="motdepasseConf" name="mdp_c" value="">
+        <input type="password" id="motdepasseConf" name="mdp_c" required value="">
         <button class="btn-action" type="button" id="buttonMDPC" onclick="Afficher('motdepasseConf', this.id)"><i class="fas fa-eye"></i></button>
     </div>
     <div>
