--- a/templates/main/creationlieu.html.twig
+++ b/templates/main/creationlieu.html.twig
@@ -13,17 +13,17 @@
                     <label for="rue-lieu-sortie">Rue du lieu :</label>
                     <input type="text" name="rue-lieu-sortie">
                 </div>
-                <div>
+                <div class="ville">
                     <label for="cp-ville-select">Code postal :</label>
                     <select id="cp-ville-select" onchange=showInfo(this.value) class="form-control" name="cp-ville-select">
                         {% for vv in ville %}
                             <option value="{{ vv.id }}"> {{ vv.codePostal }} {{ vv.nom }}</option>
                         {% endfor %}
                     </select>
+                    <div>
+                        <a href="{{ path('app_ville')}}" class="btn btn-action"><i class="fas fa-plus-circle"></i>  Créer une ville</a>
+                    </div>
                 </div>
-                        <div>
-                            <a href="{{ path('app_ville')}}" class="btn btn-action">  Créer une ville</a>
-                        </div>
                 <div>
                     <label for="lat-lieu-sortie">Latitude :</label>
                     <input type="number" name="lat-lieu-sortie" min="-90" max="90" step=".0000001">
