--- a/templates/main/creationlieu.html.twig
+++ b/templates/main/creationlieu.html.twig
@@ -21,7 +21,7 @@
                         {% endfor %}
                     </select>
                     <div>
-                        <a href="{{ path('app_ville')}}" class="btn btn-action"><i class="fas fa-plus-circle"></i>  Créer une ville</a>
+                        <a href="{{ path('app_ville')}}" class="btn btn-action"><i class="fas fa-plus-circle"></i></a>
                     </div>
                 </div>
                 <div>
