--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,54 +10,73 @@
 
     <div class="offset-3 col-6">
 
-        {% if error %}
-            <div class="alert alert-danger"> Identifiant ou mot de passe
-                incorrect{# *{{ error.messageKey|trans(error.messageData, 'security') }}*/ #}</div>
-        {% endif %}
+    {% if error %}
+        <div class="alert alert-danger"> Identifiant ou mot de passe
+            incorrect{# *{{ error.messageKey|trans(error.messageData, 'security') }}*/ #}</div>
+    {% endif %}
 
-        {% if app.user %}
-            <div class="mb-3">
-                Vous êtes connecté.e avec le mail : {{ app.user.username }}
-                <br>
-                <br>
-                <button class="btn btn-lg btn-outline-danger" onclick="{{ path('app_logout') }}">
-                    Se déconnecter
-                </button>
+    {% if app.user %}
+        <div class="m-3">
+            <div class="mx-auto">
+                Vous êtes déjà connecté.e avec le mail : {{ app.user.username }}
             </div>
-            <br>
-        {% endif %}
+            <div>
+                <a class="btn btn-outline-danger" href="{{ path('app_logout') }}">
+                    Se déconnecter
+                </a>
+                <a class="btn btn-outline-secondary m-5" href="{{ path('main') }}">
+                    Page d'accueil
+                </a>
+            </div>
+        </div>
+        <br>
+
+    {% else %}
 
         <form method="post">
 
-            <label class="mb-1" for="inputEmail">Identifiant</label>
-            <input type="texte" value="{{ last_username }}" name="email" id="inputEmail" class="form-control"
-                   placeholder="email ou pseudo" autocomplete="email" required autofocus>
-            <label class="mt-3 mb-1" for="inputPassword">Mot de passe</label>
-            <input type="password" name="password" id="inputPassword" class="form-control"
-                   autocomplete="current-password" required>
-
-
-            <input type="hidden" name="_csrf_token"
-                   value="{{ csrf_token('authenticate') }}"
-            >
-
-
-            <div>
-                <div class="checkbox mb-3">
-                    <label>
-                        <input class="mt-3" type="checkbox" name="_remember_me"> Se souvenir de moi
-                    </label>
+            <div class="row m-3">
+                <div class="col col-lg-4">
+                    <label class="mb-1" for="inputEmail">Identifiant :</label>
                 </div>
-
-
-                <a class="mb-5" href="#">Mot de passe oublié</a>
-                <br>
-                <br>
-                <button class="btn btn-lg btn-secondary" type="submit">
-                    Connexion
-                </button>
-                <br>
+                <div class="col col-lg-8">
+                    <input type="text" value="{{ last_username }}" name="email" id="inputEmail" class="form-control"
+                           placeholder="email ou pseudo" autocomplete="email" required autofocus>
+                </div>
             </div>
+            <div class="row m-3">
+                <div class="col col-lg-4">
+                    <label class="mt-3 mb-1" for="inputPassword">Mot de passe :</label>
+                </div>
+                <div class="col col-lg-8">
+                    <input type="password" name="password" id="inputPassword" class="form-control"
+                           autocomplete="current-password" required>
+                </div>
+            </div>
+
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+            <div class="row btn-container mt-5">
+                <div class="col">
+                    <button class="btn btn-lg btn-secondary" type="submit">
+                        Connexion
+                    </button>
+                </div>
+                <div class="col">
+                    <div class="row checkbox">
+                        <label>
+                            <input class="mt-1" type="checkbox" name="_remember_me"> Se souvenir de moi
+                        </label>
+                    </div>
+                    <div class="row">
+                        <a href="#">Mot de passe oublié</a>
+                    </div>
+                </div>
+            </div>
+
         </form>
-    </div>
+        </div>
+
+    {% endif %}
+
 {% endblock %}
